[project]
name = "pyeventmanager"
version = "0.6.1"
authors = [{ name = "Jeordy", email = "JeordyR@users.noreply.github.com" }]
description = "Pydantic-based event management system for Python."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = ["pydantic>=2.12.5"]

[build-system]
requires = ["uv_build>=0.11.1,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "event_manager"
module-root = ""

[project.urls]
Documentation = "https://event-manager.jeofi.com"
Homepage = "https://event-manager.jeofi.com"
Repository = "https://github.com/JeordyR/PyEventManager"
Issues = "https://github.com/JeordyR/PyEventManager/issues"

[dependency-groups]
docs = ["pdoc>=16.0.0"]
test = [
    "coverage>=7.13.5",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]

# [tool.hatch.build.targets.wheel]
# packages = ["event_manager"]

# [tool.hatch.envs.default]
# path = ".venv"
# dependencies = ["pytest", "pytest-cov", "mypy", "ruff", "coverage", "pdoc"]

# [tool.hatch.envs.default.scripts]
# test = "pytest {args:tests}"
# test-cov = "pytest --doctest-modules --cov=event_manager {args:tests}"
# test-report = "pytest --doctest-modules --junit-xml=junit/test-results.xml --cov=event_manager --cov-report=xml --cov-report=html"
# docs-build = "python -m pdoc event_manager --docformat google -o ./docs"
# docs-live = "python -m pdoc event_manager --docformat google"

[tool.coverage.run]
branch = true
relative_files = true
omit = ["event_manager/listeners/base.py"]

[tool.coverage.report]
# fail_under = 90
precision = 2

[tool.mypy]
strict = true
exclude = ["venv"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["B006"]


# [tool.hatch.envs.style]
# detached = true
# dependencies = ["ruff"]

# [tool.hatch.envs.style.scripts]
# check = ["ruff check . --output-format=github"]
# fmt = ["ruff check . --output-format=github --fix"]
